# mahakam

./: .KIT-REQUEST-SPEC.md  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  Taskfile.yml  flake.nix  kind.yaml  skaffold.yaml
chart/environment/: Chart.yaml  values.yaml
chart/environment/templates/: namespace.yaml  vcluster-app.yaml
chart/mahakam/: Chart.yaml  values.schema.json  values.yaml
chart/mahakam/templates/: api-deployment.yaml  rbac.yaml  serviceaccount.yaml  web-deployment.yaml
chart/workspace/: Chart.yaml  values.yaml
chart/workspace/templates/: namespace.yaml  vcluster-app.yaml
crates/api/: Cargo.toml
crates/api/migrations/: 001_environments.sql  001_workspaces.sql
crates/api/src/: main.rs
crates/api/src/k8s/: argocd.rs  kustomize.rs  metrics.rs  mod.rs  namespace.rs  vcluster.rs  viewer.rs
crates/api/src/routes/: mod.rs
crates/api/src/routes/handlers/: environments.rs  health.rs  mod.rs  projects.rs  workspaces.rs
crates/shared/: Cargo.toml
crates/shared/src/repositories/: mod.rs
crates/shared/src/repositories/environment/: mock.rs  mod.rs  models.rs  sqlite.rs
crates/shared/src/repositories/workspace/: mock.rs  mod.rs  models.rs  sqlite.rs
crates/shared/src/services/: environment.rs  mod.rs  workspace.rs
e2e/: run-tests.sh
environments/base/: env-config.yaml  kustomization.yaml  repo-cloner-job.yaml
frontends/web/: .gitignore  app.vue  nuxt.config.ts  package.json  tsconfig.json  vitest.config.ts
frontends/web/api/: environments.ts  projects.ts  workspaces.ts
frontends/web/components/: EnvironmentForm.vue  EnvironmentList.vue  TerminalViewer.vue  WorkspaceForm.vue  WorkspaceList.vue
frontends/web/composables/: useEnvironments.ts  useWorkspaces.ts
frontends/web/pages/: index.vue
frontends/web/pages/projects/[project]/: index.vue
frontends/web/pages/projects/[project]/workspaces/: [name].vue
frontends/web/server/api/environments/: [name].delete.ts  index.get.ts  index.post.ts
frontends/web/server/api/projects/: index.get.ts
frontends/web/server/api/workspaces/: [name].delete.ts  index.get.ts  index.post.ts
frontends/web/tests/e2e/: index.spec.ts
frontends/web/tests/unit/: setup.ts
frontends/web/tests/unit/api/: environments.spec.ts  projects.spec.ts  workspaces.spec.ts
frontends/web/tests/unit/components/: EnvironmentForm.spec.ts  EnvironmentList.spec.ts  TerminalViewer.spec.ts  WorkspaceForm.spec.ts  WorkspaceList.spec.ts
frontends/web/tests/unit/composables/: useEnvironments.spec.ts  useWorkspaces.spec.ts
images/: android-viewer.containerfile  api.containerfile  browser-viewer.containerfile  e2e.containerfile  ttyd.containerfile  web.containerfile
kube/: api-deployment.yaml  api-service.yaml  deployment.yaml  dev-tooling.yaml  gateway.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  web-deployment.yaml  web-service.yaml
tests/: browser-viewer-nginx.sh
workspaces/base/: kustomization.yaml  repo-cloner-job.yaml  ws-config.yaml
(+6 files in other folders)
