[workspace]
members = [
    "crates/api",
]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
mockall = "0.13"
