[workspace]
members = [
    "crates/shared",
    "crates/api",
]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
mockall = "0.13"
async-trait = "0.1"
kube = { version = "0.96", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors"] }
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
