[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
uuid = { workspace = true }
tower-http = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
